Made further changes to match the design

--- a/index.html
+++ b/index.html
@@ -17,25 +17,21 @@
   </style>
 </head>
 <body>
-  <img src="/images/logo.svg" class="Logo"alt="logo">
+  <img src="/images/logo.svg" class="logo"alt="logo">
   <div class="container">
-   
-  <div class="Main-section">
-  <!-- <div class="bgimage"></div>   -->
- 
- <img src="/images/illustration-mockups.svg" alt="illustration-mockups">
-</div>
-<div class="Secondary-section">
-  <h1>Build The Community Your Fans Will Love</h1>
-  <p class="Paragraph">
+   <div class="main-section">
+    <img src="/images/illustration-mockups.svg" alt="illustration-mockups">
+   </div>
+   <div class="secondary-section">
+   <h1>Build The Community Your Fans Will Love</h1>
+   <p class="paragraph">
     Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
     Create connections with your users as you engage in genuine discussion. 
-  </p>
-    <button class="button">Register</button>
-    
-</div>
-</div>
-<div class="Icons">
+   </p>
+  <button class="button">Register</button>  
+   </div>
+ </div>
+<div class="icons">
   <i class="fab fa-facebook-f"></i>
   <i class="fab fa-twitter"></i>
   <i class="fab fa-instagram"></i>
