--- a/index.html
+++ b/index.html
@@ -1,46 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="./all.css">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap"
+    rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
 
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
-  <img src="/images/logo.svg" class="logo"alt="logo">
-  <div class="container">
-   <div class="main-section">
-    <img src="/images/illustration-mockups.svg" alt="illustration-mockups">
-   </div>
-   <div class="secondary-section">
-   <h1>Build The Community Your Fans Will Love</h1>
-   <p class="paragraph">
-    Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-    Create connections with your users as you engage in genuine discussion. 
-   </p>
-  <button class="button">Register</button>  
-   </div>
- </div>
-<div class="icons">
-  <i class="fab fa-facebook-f"></i>
-  <i class="fab fa-twitter"></i>
-  <i class="fab fa-instagram"></i>
-</div>
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://www.nareshpoonia.com">Naresh Poonia</a>.
-    </p>
-  </footer>
+  <div class="wrapper">
+    <!--use semantic elements when used-->
+    <header>
+      <div class="logo_container">
+        <!--use alt logo that can help when image fails to load and assistive tech users-->
+        <img src="/images/logo.svg" class="logo" alt="logo">
+      </div>
+      <div class="main-section">
+        <img class="main-image" src="/images/illustration-mockups.svg" alt="illustration-mockups">
+      </div>
+    </header>
+
+    <main class="container">
+      <div class="secondary-section">
+        <h1 class="title">Build The Community Your Fans Will Love</h1>
+        <p class="paragraph">
+          Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+          Create connections with your users as you engage in genuine discussion.
+        </p>
+        <button class="button">Register</button>
+      </div>
+    </main>
+    
+    <footer>
+      <div class="icons">
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-instagram"></i>
+      </div>
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://www.nareshpoonia.com">Naresh Poonia</a>.
+      </p>
+    </footer>
+  </div>
 </body>
+
 </html>
