Changed Background image element

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <img src="/images/logo.svg" class="logo"alt="logo">
   <div class="container">
    <div class="main-section">
-    <img src="/images/illustration-mockups.svg" alt="illustration-mockups">
+    <img class="main-image"src="/images/illustration-mockups.svg" alt="illustration-mockups">
    </div>
    <div class="secondary-section">
    <h1>Build The Community Your Fans Will Love</h1>
